# k8s-ariadne-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  index.html  prompt.txt  promt.txt
.devcontainer/: Dockerfile  devcontainer.json
ariadne-app/: Cargo.toml  build.rs
ariadne-app/src/: errors.rs  index.html  kube_tool.rs  logger.rs  main.rs  routes.rs
ariadne-cli/: Cargo.toml  README.md
ariadne-cli/config/: model_context_windows.toml
ariadne-cli/src/: error.rs  gui.rs  gui_dioxus.rs  lib.rs  llm.rs  main.rs  tui.rs  validation.rs
ariadne-cli/src/agent/: agentic.rs  analyst.rs  context.rs  mod.rs  prompts.rs  router.rs  translator.rs  types.rs  util.rs
ariadne-cli/tests/: validation.rs
ariadne-core/: Cargo.toml
ariadne-core/src/: cluster_state.rs  diff.rs  errors.rs  graph_schema.rs  graphqlite.rs  in_memory.rs  kube_access.rs  kube_client.rs  lib.rs  memgraph.rs  memgraph_async.rs  state.rs  state_resolver.rs  tls.rs
ariadne-core/src/backends/: in_memory.rs  memgraph.rs  memgraph_async.rs
ariadne-core/src/graph/: actor.rs  backend.rs  schema.rs
ariadne-core/src/kube/: client.rs  snapshot.rs  state_resolver.rs
ariadne-core/src/state/: id_gen.rs  mod.rs
ariadne-core/src/types/: mod.rs
ariadne-core/tests/: memgraph_integration.rs
ariadne-cypher/: Cargo.toml  README.md
ariadne-cypher/src/: ast.rs  lib.rs  parser.rs  validate.rs
ariadne-cypher/tests/: ast.rs  case_predicate.rs  parser_fuzz.rs  parser_smoke.rs  tck_parser.rs
ariadne-mcp/: Cargo.toml
ariadne-mcp/src/: index.html  kube_tool.rs  logger.rs  main.rs  routes.rs
ariadne-tools/: Cargo.toml  build.rs
ariadne-tools/src/: lib.rs  logger.rs  main.rs  schema.rs
docker/: Dockerfile
docs/: architecture.md  development.md  snapshots.md
docs/diagrams/c4/: component.puml
docs/notes/: english_to_cypher_translator_issue.md
docs/spec/: llm_constrained_decoding_graphdb.md
docs/specs/: agent-mcp-integration.md  llm_nl_to_cypher_evaluation_spec.md  ui.md
python/agent/: README.md  pyproject.toml
python/agent/adk_config/k8s_graph_agent/: root_agent.yaml
python/agent/eval/: 20260201_221102.md  questions.yaml
python/agent/eval/runs/20260201_221102/: manifest.json  results_gemini-2.5-flash-lite.jsonl  results_gemini-2.5-flash.jsonl  results_gemini-3-flash-preview.jsonl  results_gemini-3-pro-preview.jsonl  results_openai_gpt-5-mini-2025-08-07.jsonl  results_openai_gpt-5-nano-2025-08-07.jsonl  results_openai_gpt-5.2-2025-12-11.jsonl
python/agent/eval/runs/20260202_214942/: manifest.json  results_claude-haiku-4-5-20251001.jsonl  results_claude-opus-4-5-20251101.jsonl  results_claude-sonnet-4-5-20250929.jsonl  results_deepseek-r1.jsonl  results_gemini-2.5-flash-lite.jsonl  results_gemini-2.5-flash.jsonl  results_gemini-3-flash-preview.jsonl  results_gemini-3-pro-preview.jsonl  results_openai_gpt-5-mini-2025-08-07.jsonl  results_openai_gpt-5-nano-2025-08-07.jsonl  results_openai_gpt-5.2-2025-12-11.jsonl
python/agent/scripts/: run_evals.py  run_webui.sh  summarize_eval_run.py  sync_adk_prompt.py
python/agent/src/k8s_graph_agent/: __init__.py  adk_tools.py  adk_translate.py  agent.py  cli.py  config.py  cypher_ast.py  cypher_validator.py  graph_schema.py  logging_utils.py  mcp_client.py  models.py  openai_bridge.py  prompting.py  synthesize.py  translate.py
python/agent/src/k8s_graph_agent/cypher_validator/: __init__.py  ast_utils.py  compatibility.py  errors.py  extract.py  model.py  normalize.py  schema_rules.py  text_utils.py  validator.py  visitor.py
python/agent/src/k8s_graph_agent/eval/: __init__.py  cli.py  loader.py  models.py  runner.py
python/agent/tests/: test_adk_translate.py  test_agent.py  test_cypher_validator.py  test_graph_schema.py  test_logging_utils.py  test_mcp_client.py  test_prompting.py  test_synthesize.py
scripts/: verify_memgraph_snapshot.py
src/: cluster_state.rs  errors.rs  id_gen.rs  index.html  logger.rs  main.rs  routes.rs
