[workspace]
resolver = "2"

members = [
    "ariadne-core",
    "ariadne-app",
    "ariadne-tools",
]

[workspace.package]
authors = ["Artavazd Balaian <reasyu@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.93.0"
version = "0.4.13"

[workspace.dependencies]
ariadne-app = { path = "ariadne-app" }
ariadne-core = { path = "ariadne-core" }
ariadne-tools = { path = "ariadne-tools" }
async-trait = "0.1"
axum = "0.8.8"
axum-prometheus = "0.10"
chrono = { version = "0.4" }
clap = {  version = "4.5", features = ["derive"] }
const_format = "0.2"
crossbeam = "0.8"
futures = {  version = "0.3" }
http = "1"
k8s-openapi = { version = "0.27.0", features = ["v1_32", "schemars"] }
kube = { version = "3.0.1", features = ["runtime"] }
petgraph = { version = "0.8.3", features = ["serde-1"] }
rmcp = { version = "0.14.0", features = ["server", "transport-streamable-http-server", "macros", "transport-worker"] }
rsmgclient = { git = "https://github.com/memgraph/rsmgclient.git", rev = "ce4fa893339831d8604ac31189a77b9b00913816" }
schemars = { version = "1.2.0", features = ["derive"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
shadow-rs = "1.7.0"
strum = "0.27"
strum_macros = "0.27"
testcontainers = { version = "0.26", features = ["watchdog"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-br", "propagate-header", "sensitive-headers", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.profiling]
inherits = "release"
debug = true
strip = false

[profile.release]
debug = true

[workspace.lints.clippy]
# Detects large stack-allocated futures that may cause stack overflow crashes (see threshold in clippy.toml)
large_futures = "warn"
used_underscore_binding = "warn"
or_fun_call = "warn"
unnecessary_lazy_evaluations = "warn"
uninlined_format_args = "warn"
