[workspace]
resolver = "2"

members = [
    "ariadne-core",
    "ariadne-app",
    "ariadne-tools",
    "ariadne-cli",
]

[workspace.package]
authors = ["Artavazd Balaian <reasyu@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.93.0"
version = "0.6.0"

[workspace.dependencies]
ariadne-app = { path = "ariadne-app" }
ariadne-core = { path = "ariadne-core" }
ariadne-tools = { path = "ariadne-tools" }
async-trait = "0.1"
axum = "0.8.8"
axum-prometheus = "0.10"
chrono = { version = "0.4" }
clap = {  version = "4.5", features = ["derive", "env"] }
const_format = "0.2"
crossbeam = "0.8"
crossterm = "0.27"
futures = {  version = "0.3" }
graphqlite = { version = "0.3.2", features = ["bundled-extension"] }
http = "1"
k8s-openapi = { version = "0.27.0", features = ["v1_32", "schemars"] }
kube = { version = "3.0.1", features = ["runtime"] }
llm = { version = "1.3.7", features = ["openai", "anthropic", "ollama", "deepseek", "xai", "google", "groq"]}
petgraph = { version = "0.8.3", features = ["serde-1"] }
ratatui = "0.27"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = "0.23"
rmcp = { version = "0.14.0", features = ["server", "transport-streamable-http-server", "macros", "transport-worker"] }
rsmgclient = { git = "https://github.com/memgraph/rsmgclient.git", rev = "ce4fa893339831d8604ac31189a77b9b00913816" }
schemars = { version = "1.2.0", features = ["derive"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
shadow-rs = "1.7.0"
strum = "0.27"
strum_macros = "0.27"
testcontainers = { version = "0.26", features = ["watchdog", "blocking"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-br", "propagate-header", "sensitive-headers", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.profiling]
inherits = "release"
debug = true
strip = false

[profile.release]
debug = true

[workspace.lints.clippy]
# Detects large stack-allocated futures that may cause stack overflow crashes (see threshold in clippy.toml)
large_futures = "warn"
used_underscore_binding = "warn"
or_fun_call = "warn"
unnecessary_lazy_evaluations = "warn"
uninlined_format_args = "warn"
