[workspace]
resolver = "2"

members = [
    "ariadne-core",
    "ariadne-mcp",
    "ariadne-tools",
    "ariadne-cli",
    "ariadne-cypher",
]

[workspace.package]
authors = ["Artavazd Balaian <reasyu@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.93.0"
version = "0.8.0"

[workspace.dependencies]
ariadne-mcp = { path = "ariadne-mcp" }
ariadne-core = { path = "ariadne-core" }
ariadne-cypher = { path = "ariadne-cypher" }
ariadne-tools = { path = "ariadne-tools" }
async-trait = "0.1"
axum = "0.8.8"
axum-prometheus = "0.10"
chrono = { version = "0.4" }
clap = {  version = "4.5", features = ["derive", "env"] }
const_format = "0.2"
crossbeam = "0.8"
dioxus = "0.7.3"
dioxus-desktop = "0.7.3"
dioxus-native = "0.7.3"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
futures = {  version = "0.3" }
http = "1"
k8s-openapi = { version = "0.27.0", features = ["v1_32", "schemars"] }
kube = { version = "3.0.1", features = ["runtime"] }
llm = { version = "1.3.7", features = ["openai", "anthropic", "ollama", "deepseek", "xai", "google", "groq"]}
petgraph = { version = "0.8.3", features = ["serde-1"] }
reqwest = { version = "0.13", features = ["json", "rustls-tls"] }
rmcp = { version = "0.15.0", features = ["server", "transport-streamable-http-server", "macros", "transport-worker"] }
rsmgclient = { git = "https://github.com/memgraph/rsmgclient.git", rev = "ce4fa893339831d8604ac31189a77b9b00913816" }
rustls = "0.23"
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
shadow-rs = "1.7.0"
strum = "0.27"
strum_macros = "0.27"
testcontainers = { version = "0.27", features = ["watchdog", "blocking"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-br", "propagate-header", "sensitive-headers", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26"
tree-sitter-cypher = { git="https://github.com/taekwombo/tree-sitter-cypher.git", rev = "2793d8996acc855c46dc737b12f0da79cda882b9" }

[profile.profiling]
inherits = "release"
debug = true
strip = false

[profile.release]
debug = true

[workspace.lints.clippy]
# Detects large stack-allocated futures that may cause stack overflow crashes (see threshold in clippy.toml)
large_futures = "warn"
used_underscore_binding = "warn"
or_fun_call = "warn"
unnecessary_lazy_evaluations = "warn"
uninlined_format_args = "warn"
