[package]
name = "ariadne-app"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ariadne-core = { workspace = true }
axum = { workspace = true }
axum-prometheus = { workspace = true }
kube = { workspace = true }
rsmgclient = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shadow-rs = { workspace = true }
strum  = { workspace = true }
strum_macros  = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
tower-http = { workspace = true, features = ["trace", "compression-br", "propagate-header", "sensitive-headers", "cors", "fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
shadow-rs = { workspace = true }
