[package]
name = "ariadne-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ariadne-core = { workspace = true }
ariadne-tools = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
kube = { workspace = true }
llm = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
