[package]
name = "ariadne-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
petgraph  = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true}
tokio = { workspace = true }
tracing = { workspace = true }
