[package]
name = "ariadne-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
ariadne-cypher = { workspace = true }
chrono = { workspace = true }
futures = {workspace = true }
graphqlite = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
petgraph  = { workspace = true }
rsmgclient = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum  = { workspace = true }
strum_macros  = { workspace = true }
thiserror = { workspace = true}
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
http = {  workspace = true }
testcontainers = { workspace = true}
tower = { workspace = true }
