[package]
name = "ariadne-cypher"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
tree-sitter = {  workspace = true }
tree-sitter-cypher = { workspace = true }

[dev-dependencies]
