[package]
name = "ariadne-tools"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ariadne-core = { workspace = true }
clap = { workspace = true}
k8s-openapi = { workspace = true }
rsmgclient = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shadow-rs = { workspace = true }
thiserror = { workspace = true}
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[build-dependencies]
shadow-rs = { workspace = true }